--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third repo</title>
 </head>
-<p>cheng titel</p>
+<p>chenge titel</p>
 <body>
+    <div>
+        <h3>my first git hub comments my next targate is bacame</h3>
+    </div>
+    <p>Lorem ipsum dolor sit, ametg consectetur adipisicing elit. Ullam libero tempora et unde sed non necessitatibus aut laboriosam eaque eius. Inventore, modi saepe ipsam consequuntur blanditiis natus ad libero eveniet.
+    </p>
+    <img src="download.png" alt="">
     
 </body>
 </html>
